[package]
name = "agentsmith-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
agentsmith-common = { path = "../agentsmith-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "agentsmith"
path = "src/main.rs"
